# forja

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.dev.yaml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20240101000027_add_composite_indexes.sql  20240101000028_user_preferences.sql  20240101000029_create_site_ai_configs.sql  20240101000030_create_analytics.sql  20240101000031_onboarding_and_samples.sql  20240101000032_create_ap_enums_and_actors.sql  20240101000033_create_ap_federation_tables.sql  20240101000034_create_ap_notes.sql  20240101000035_create_ap_featured_posts.sql  20240101000036_add_scheduled_notes.sql
backend/resources/seed-content/: de.json  en.json  es.json  fr.json  it.json  nl.json  pl.json  pt.json
backend/scripts/: dev_init.sh  dev_init.sql  init-extensions.sql
backend/src/: lib.rs  main.rs  openapi.rs
backend/src/config/: database.rs  mod.rs  security.rs  settings.rs
backend/src/dto/: ai.rs  analytics.rs  auth.rs  blog.rs  bulk.rs  clerk.rs  config.rs  cv.rs  error_codes.rs  health.rs  help_state.rs  mod.rs  navigation_menu.rs  notification.rs  onboarding.rs  onboarding_progress.rs  page.rs  review.rs  site.rs  site_membership.rs  site_settings.rs  user.rs  user_preferences.rs  webhook.rs
backend/src/errors/: api_error.rs  codes.rs  mod.rs
backend/src/guards/: auth_guard.rs  federation_guard.rs  mod.rs  module_guard.rs
backend/src/handlers/: ai.rs  analytics.rs  api_key.rs  audit.rs  auth.rs  blog.rs  clerk_user.rs  config.rs  content_template.rs  cv.rs  docs.rs  document.rs  environment.rs  error_codes.rs  legal.rs  locale.rs  media.rs  media_folder.rs  mod.rs  navigation.rs  navigation_menu.rs  notification.rs  onboarding_progress.rs  page.rs  redirect.rs  site.rs  site_locale.rs  site_membership.rs  site_settings.rs  social.rs  system.rs  taxonomy.rs  user.rs  webhook.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: ai_config.rs  analytics.rs  api_key.rs  audit.rs  blog.rs  content.rs  content_template.rs  cv.rs  document.rs  environment.rs  legal.rs  locale.rs  media.rs  media_folder.rs  mod.rs  navigation.rs  navigation_menu.rs  notification.rs  onboarding_progress.rs  page.rs  redirect.rs  site.rs  site_locale.rs  site_membership.rs  site_settings.rs  social.rs  taxonomy.rs  (+3 more)
backend/tests/: api_tests.rs  integration_tests.rs
(+511 files in other folders)
